--- a/xxl-job-demo/pom.xml
+++ b/xxl-job-demo/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>app</artifactId>
+    <groupId>org.liyu3432</groupId>
+    <artifactId>xxl-job-demo</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
